# agent-canvas

./: .gitignore  AGENTS.md  DEVELOPMENT.md  README.md  package-lock.json  package.json  playwright.mock-llm.config.ts  readme-uninstall-mac.md  readme-uninstall-windows.md  tailwind.config.js  test-utils.tsx
.github/workflows/: ci.yml
__tests__/: root.test.tsx
__tests__/api/: agent-server-conversation-service.test.ts  automation-service.test.ts  option-service.test.ts  settings-service.test.ts
__tests__/components/: browser.test.tsx
__tests__/contexts/: active-backend-context.test.tsx
__tests__/hooks/: use-load-older-events.test.tsx  use-websocket.test.ts
__tests__/routes/: agent-server-settings.test.tsx
__tests__/scripts/: dev-safe.test.ts
__tests__/utils/: get-git-path.test.ts
config/: defaults.json
scripts/: dev-safe.mjs  dev-static.mjs  dev-with-automation.mjs  static-server.mjs
specs/: telegram-bridge.md
src/: query-client-config.ts  root.tsx  routes.ts  tailwind.css
src/api/: README.md  agent-server-adapter.ts  agent-server-compatibility.ts  no-direct-agent-server-calls.test.ts  open-hands-axios.ts  telegram-integration-service.ts  typescript-client.ts
src/constants/: settings-nav.tsx
src/contexts/: active-backend-context.tsx
src/hooks/: use-conversation-name-context-menu.ts  use-is-creating-conversation.ts  use-settings-nav-items.ts
src/i18n/: translation.json
telegram/: README.md  pyproject.toml
telegram/src/openhands_telegram_bridge/: __init__.py  __main__.py  agent_server.py  app.py  config.py  state_store.py
(+129 files in other folders)
